Add a reference to the main README file

--- a/Flowsy.Auditable/Flowsy.Auditable.csproj
+++ b/Flowsy.Auditable/Flowsy.Auditable.csproj
@@ -22,4 +22,8 @@
         <NoWarn>$(NoWarn);NU5118;NU5128</NoWarn>
     </PropertyGroup>
 
+    <ItemGroup>
+        <None Include="../README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
 </Project>
